# hmr

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.md  README.md  hmr-config.cmake.in  install-deps
.github/workflows/: deploy.yml  test.yml
include/hmr/: error.h  export.h  hmr.h  node.h  prof.h  rc.h  tok.h
src/: aux.c  aux.h  bug.h  die.c  die.h  error.c  error.h  fsm.c  fsm.h  hmr.c  hmr.h  node.c  node.h  prof.c  prof.h  to.c  to.h  tok.c  tok.h  token.c  token.h
src/hmr/: aux.h  fsm.h  hmr.h  node.h  prof.h  rc.h  state.h  tok.h  token.h  trans.h
test/: CMakeLists.txt  read_hmm.c
